Edited styles, and fixed clipping from #sleighallday

--- a/melissa/mel_site/static/mel_site/styles/styles.css
+++ b/melissa/mel_site/static/mel_site/styles/styles.css
@@ -15,7 +15,14 @@ body{
   margin-top:-10px;
 }
 .title{
-  font-size: calc(36px + 2vw);
+  font-size: calc(20px + 2vw);
+  margin-top: 50px;
+  text-align: center;
+}
+.title2{
+  font-size: calc(10px + 2vw);
+  margin-top: 50px;
+  text-align: center;
 }
 
 .edit{
@@ -26,10 +33,7 @@ body{
   padding: 20px;
 }
 
-.title{
-  margin-top: 50px;
-  text-align: center;
-}
+
 
 .image-container{
   display: flex;
